tests/baselines/reference/internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.errors.txt
internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts(11,16): error TS2437: Module 'A' is hidden by a local declaration with the same name.


==== internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts (3 errors) ====
    class A {
        aProp: string;
    }
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface X { s: string }
        export var a = 10;
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var A = 1;
        import Y = A;
                   ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    